*
* 1.3.0
*

- Fixed issues: #79, #393, #88


*
* 1.2.11
*

- Thresholds can be defined as NXSL scripts
- XMPP messaging support
- "Do not save collected data to database" option for data collection items
- Added "follow" option to "download file" object tools
- New attribute "driver" for NXSL class "Node"
- Management console:
	- Stacked line charts implemented
	- Authentication by certificates supported by Java console
	- Russian translation improved
- Fixed issues: #16, #76, #385, #464, #469, #472


*
* 1.2.10
*

- Event processing policy rules can be exported and imported
- NXSL:
	- Implemented post-increment and post-decrement for array elements
	- New functions: GetDCIValues
- Server's ICMP ping timeout can be configured
- DB/2 monitoring subagent
- DB/2 supported as backend database
- Table DCIs can be used in condition objects
- nxapush can push data on behalf of other nodes
- Transformation script can be run on aggregated DCIs
- Unknown SNMP trap sources can be automatically added as nodes
- Syslog processing optinmized for performance
- Default shared secret for agents can be configured
- Driver for Ping3 devices
- Driver for Allied Telesis switches
- Agent installer on Windows automatically adds firewall exception
- Database migration tool
- Additional parameters in Solaris platform sub-agent
- Management console:
	- New command line option -fullscreen
	- Option to draw borders around each value in "gauge" dashboard elements
	- Sorting by value in "Last Values" view takes data type into consideration
	- "Nodes" tab in object details view for subnets and containers
	- "Address Map" tab in object details view for subnets
	- Czech and Russian localization
- Fixed issues: #150, #226, #307, #330, #362, #363, #364, #366, #367, #373, #378, 
                #384, #387, #390, $401, #410, #414, #416, #419, #439, #440


*
* 1.2.9
*

- Templates can be applied on clusters
- Filters for automaticaly populated network maps
- User-defined constants in NXSL