@@ -2,6 +2,9 @@
 * 1.3.0
 *
 
+- Android Console:
+	- Implemented "Entire network" root (feature #482)
+	- Manage last alarm from status bar: acknowledge, resolve, terminate (only for Android >= 4.1)
 - Fixed issues: #79, #393, #88
 
 
